--- a/backend/package.json
+++ b/backend/package.json
@@ -1,12 +1,10 @@
 {
   "name": "project-drop-backend",
   "version": "1.0.0",
-  "type": "module",
   "main": "index.js",
   "scripts": {
     "start": "node index.js",
-    "dev": "nodemon index.js",
-    "build": "echo 'No build step needed'"
+    "dev": "nodemon index.js"
   },
   "dependencies": {
     "archiver": "^5.3.1",
@@ -15,12 +13,10 @@
     "express": "^4.18.2",
     "jsonwebtoken": "^9.0.0",
     "mongoose": "^7.0.0",
-    "multer": "^1.4.5-lts.1"
+    "multer": "^1.4.5-lts.1",
+    "bcryptjs": "^2.4.3"
   },
   "devDependencies": {
     "nodemon": "^2.0.22"
-  },
-  "engines": {
-    "node": ">=18.x"
   }
 }
